--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@nebular/theme": "^9.0.2",
     "@types/bootstrap": "^5.2.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
