--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.3.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.5.0",
+    "stripe": "^12.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
